fix: Gatsby: Main photo overflows footer if content is too short

--- a/gatsby/src/layouts/default-layout.module.scss
+++ b/gatsby/src/layouts/default-layout.module.scss
@@ -7,7 +7,6 @@
   background: #e5e5e5;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 
 .main {
@@ -31,6 +30,7 @@
   width: 100%;
   height: auto !important;
   backface-visibility: hidden;
+  max-height: 100%;
 
   &.searchDisplayed {
     // additional top position when search on mobile is visible
